--- a/index.html.html
+++ b/index.html.html
@@ -70,27 +70,27 @@
                 <div class="pageFoldRight"></div>
               </div>
               <div class="pageFace back">
-                <img src="C:/Users/17034/Desktop/flippy/Flippy/images/commission2.png" alt="Back of Page 3">
+                <img src="C:\Users\17034\Desktop\flippy\Flippy\images\419215768_3199648100331630_6379064911651353235_n.png" alt="Back of Page 3">
                 <div class="pageFoldLeft"></div>
               </div>
             </div>
             <div id="page2" class="page">
               <div class="pageFace front">
-                <img src="C:/Users/17034/Desktop/flippy/Flippy/images/commission2.png" alt="Front of Page 2">
+                <img src="C:\Users\17034\Desktop\flippy\Flippy\images\commission1.png" alt="Front of Page 2">
                 <div class="pageFoldRight"></div>
               </div>
               <div class="pageFace back">
-                <img src="C:/Users/17034/Desktop/flippy/Flippy/images/commission2.png" alt="Back of Page 2">
+                <img src="C:\Users\17034\Desktop\flippy\Flippy\images\419215768_3199648100331630_6379064911651353235_n.png" alt="Back of Page 2">
                 <div class="pageFoldLeft"></div>
               </div>
             </div>
             <div id="page1" class="page">
               <div class="pageFace front">
-                <img src="C:/Users/17034/Desktop/flippy/Flippy/images/commission2.png" alt="Front of Page 1">
+                <img src="C:\Users\17034\Desktop\flippy\Flippy\images\448760766_822878576571261_5663256763787464589_n.png" alt="Front of Page 1">
                 <div class="pageFoldRight"></div>
               </div>
               <div class="pageFace back">
-                <img src="C:/Users/17034/Desktop/flippy/Flippy/images/commission2.png" alt="Back of Page 1">
+                <img src="C:\Users\17034\Desktop\flippy\Flippy\images\448760766_822878576571261_5663256763787464589_n.png" alt="Back of Page 1">
                 <div class="pageFoldLeft"></div>
               </div>
             </div>
